--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -3,11 +3,17 @@
   display: flex; 
   flex-wrap: wrap; 
   justify-content: space-evenly; 
+  background-image: linear-gradient(gray, rgba(230, 230, 193, 0.877));
 }
 
 img {
   width: 100%;
   height: 60%;  
+}
+
+h1 {
+  text-align: center; 
+  width: 100%; 
 }
 
 
